<resources>
    <string name="app_name">Espoo</string>

    <string name="login_title">Log in.</string>
    <string name="login_subtitle">Log in with your data or</string>
    <string name="register_now">register now.</string>
    <string name="login_username">Email / username</string>
    <string name="login_password">Password </string>
    <string name="login_btn">Log in</string>
    <string name="login_forgot_password">Forgot password?</string>

    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>

    <string name="survey_call_to_action">Tap to resume</string>
    <string name="espoo_logo">Espoo logo</string>

    <!-- validations-->
    <string name="field_does_not_filled">field doesn’t filled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>